tests/bad/typed_literals.ae
/// fail: Could not find type with this name

def main() {
    let x = 125u128
}